--- a/Proyecto Unit2/angular-svtickets/package.json
+++ b/Proyecto Unit2/angular-svtickets/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser-dynamic": "^19.1.3",
     "@angular/router": "^19.1.3",
     "@geoapify/geocoder-autocomplete": "^2.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ol": "^10.3.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
