--- a/Proyecto Unit2/angular-svtickets/package.json
+++ b/Proyecto Unit2/angular-svtickets/package.json
@@ -20,12 +20,12 @@
     "@angular/platform-browser-dynamic": "^19.1.3",
     "@angular/router": "^19.1.3",
     "@geoapify/geocoder-autocomplete": "^2.1.0",
-    "@sweetalert2/ngx-sweetalert2": "^12.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ol": "^10.3.1",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "^19.1.4",
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.3",
+    "@angular/localize": "^19.1.3",
     "@types/google.accounts": "^0.0.15",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.0.2",
